--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -582,6 +582,9 @@
                             &:hover{
                                 .delete-icon{                                   
                                     display: block;
+                                    &.pos-trash {
+                                        top: 16px;
+                                    }
                                 }
                             }
                         }
