--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -234,6 +234,7 @@
                                             white-space: nowrap;
                                             text-overflow: ellipsis;
                                             max-width: 100%;
+                                            height: 20px;                                           
                                         }
                                         .desc{
                                             color: #5F6368;
@@ -242,6 +243,13 @@
                                             white-space: nowrap;
                                             text-overflow: ellipsis;
                                             max-width: 100%;
+                                            height: 20px;
+                                            b{                                              
+                                                font-weight: 400 !important;
+                                            }
+                                            .markdownItalic{
+                                                font-style: normal;
+                                            }
                                         }
                                     }
                                 }                     
