--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -79,7 +79,7 @@
     </div>
 
     <!-- CREATE NEW TRAIT MODAL-->
-    <kr-modal modalType="slide" modalClass="addTraitModalComponent" #statusModalPop>
+    <kr-modal modalType="center" modalClass="addTraitModalComponent" #statusModalPop>
         <div class="modal-header">
             <div class="header-title" (click)='closeStatusModal()'><img src="assets/images/closeCross.png"
                     class="closeCross">
