--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -1,6 +1,7 @@
 @import "./../../../app/scss/variables/variables.scss";
 
 .traits-container {
+    padding-right: 15px;
     .perfect-scroll {
         height: calc(100vh - 50px);
     }
@@ -12,20 +13,17 @@
         }
         .noTraitsInfo {
             .infoHeader {
-                width: 218px;
-                font-family: Lato;
                 font-size: 24px;
                 font-weight: 300;
                 text-align: center;
-                color: $primaryColor;
-                margin-top: 20px;
+                color: #202124;
+                margin-top: 30px;
                 display: inline-block;
             }
             .infoP {
-                font-family: Lato;
                 font-size: 14px;
                 text-align: center;
-                color: $secondaryColor;
+                color:  #5F6368;;
                 margin-top: 10px;
             }
             .createNewTrait {
@@ -48,8 +46,8 @@
         }
         .emptyNote {
             font-size: 14px;
-            border: solid 1px $borderColor;
-            background-color: $backgroundColor;
+            // border: solid 1px #f3d19b;
+            background-color: #F8F9FA;
             margin-top: 30px;
             width: 80%;
             // height: 114px;
@@ -59,12 +57,14 @@
             padding: 24px 30px;
             .emptyTitle {
                 font-size: 14px;
-                font-weight: bold;
+                font-weight: 600;
+                color: #202124;
                 margin-bottom: 4px;
             }
             .emptyDesc {
                 font-size: 12px;
                 font-weight: normal;
+                color: #5F6368;
                 margin-bottom: 15px;
                 &.marginBottom10 {
                     margin-bottom: 10px;
