--- a/findly-builder/src/app/components/faqs/group-input/group-input.component.html
+++ b/findly-builder/src/app/components/faqs/group-input/group-input.component.html
@@ -11,15 +11,17 @@
       <input
         placeholder="New group..."
         #groupInput
+        (ngModelChange)="changeList($event)"
         [formControl]="groupCtrl"
         [matAutocomplete]="auto"
         [matChipInputFor]="chipList"
         [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
         (matChipInputTokenEnd)="add($event)">
     </mat-chip-list>
-    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-      <mat-option *ngFor="let group of filteredgroups | async" [value]="group">
-        {{group}}
-      </mat-option>
-    </mat-autocomplete>
+      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+        <!-- <mat-option *ngFor="let group of filteredgroups | async" [value]="group"> -->
+        <mat-option *ngFor="let group of currentSugg" [value]="group">
+          {{group}}
+        </mat-option>
+      </mat-autocomplete>
   </mat-form-field>
