TRAITS CREATION MODAL STYLING

--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -101,10 +101,10 @@
                 </p>
                 <input type="text" placeholder="Type & enter to add" class="input-text">
             </div>
-            <div class="action">
-                <button class="kr-sg-button-primary" (click)="closeStatusModal()">Save</button>
-            </div>
         </div>
 
+        <div class="modal-footer">
+            <button class="kr-sg-button-primary" (click)="closeStatusModal()">Save</button>
+        </div>
     </kr-modal>
 </div>
