--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -56,6 +56,8 @@ app-mainmenu{
 				left: 0;
 				padding: 0 25px;
 				background: #E4E5E7;
+				margin-bottom: 0;
+				border-radius: 0;
 			}
 			.inlineIconBox{
 				display: inline-block;
