synonyms fix  updates on errors and few updates

--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -45,8 +45,8 @@
                             <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle>Add</button>                                            
                                 <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-                                  <li (click)="selectSourceDrop.close();addFaqSource('faqDoc')">Extract FAQs</li>
-                                  <li (click)="selectSourceDrop.close();addFaqSource('faqWeb')">Import FAQs</li>
+                                  <li (click)="selectSourceDrop.close();addFaqSource('faqWeb')">Extract FAQs</li>
+                                  <li (click)="selectSourceDrop.close();addFaqSource('faqDoc')">Import FAQs</li>
                                   <li (click)="selectSourceDrop.close();addFaqSource('manual')">Add FAQs Manually</li>
                                 </ul>
                             </div>
