--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -67,11 +67,11 @@
       <div class="modal-body textAlignLeft">
         <div class="kr-sg-input-text mb-3">
           <div class="label-text">Name</div>
-          <input maxlength="128" type="text" placeholder="App name" class="input-text" [(ngModel)]="newApp.name" name="appName">
+          <input maxlength="128" type="text" autocomplete="off" placeholder="App name" class="input-text" [(ngModel)]="newApp.name" name="appName">
         </div>
         <div class="kr-sg-input-text-area mb-2">
           <div class="label-text">Description</div>
-          <textarea maxlength="512" placeholder="App description " class="input-text" [(ngModel)]="newApp.description" name="appDesc"></textarea>
+          <textarea maxlength="512" placeholder="App description " autocomplete="off" class="input-text" [(ngModel)]="newApp.description" name="appDesc"></textarea>
         </div>
         <div class="kr-sg-dropdowns w-100 mt-1">
           <div class="label-text">Language</div>
