--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -4,9 +4,7 @@
       <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
       <span class="please-wait-message">Please Wait!</span>
     </div>
-    <div class="mainLoadingSpinner" *ngIf="!(synonymData && synonymData.length) && !loadingContent">
-      <span class="please-wait-message">No Content Available</span>
-    </div>
+    
   <div  class="table-list-content">
       <div class="kr-sg-data-table" *ngIf="!loadingContent">
         <div class="table-action-header">
@@ -32,15 +30,15 @@
           <div class="input-box">
             <div class="kr-sg-input-text">
                 <div class="label_text">Keyword</div>
-                <input type="text" id="name" autocomplete="off" [(ngModel)]="synonymObj.keyword" [ngModelOptions]="{standalone: true}" placeholder="Keyword" required class="input-text">
+                <input type="text" id="synonymName" name="synonymName" autocomplete="off" [(ngModel)]="synonymObj.keyword" [ngModelOptions]="{standalone: true}" placeholder="Keyword" required class="input-text">
             </div>
           </div>
           <div class="input-box">
               <div class="chip-sys-data">                      
                   <div class="label_text" for="exampleInputEmail1">Synonyms</div>
                   <mat-form-field  class="example-chip-list" [floatLabel]="'never'">
-                      <mat-chip-list #chipList aria-label="tag selection">
-                        <mat-chip *ngFor="let syn of synArr" [selectable]="selectable" [removable]="removable" (removed)="remove(syn)">{{syn}}
+                      <mat-chip-list #chipList>
+                        <mat-chip *ngFor="let syn of synArr" [selectable]="selectable" [removable]="removable" (removed)="remove(syn)"><span *ngIf="syn">{{syn}}</span>
                           <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
                         </mat-chip>
                         <input placeholder="Synonyms" [value]="typedQuery" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)" #suggestedInput [(ngModel)]="synonymObj.synonyms" [ngModelOptions]="{standalone: true}" autocomplete="off">
@@ -57,9 +55,12 @@
     </div>
  </div>
   <!-- synonyms Card Header -->
-
+  
   <!-- synonyms List -->
   <perfect-scrollbar class="table-scroll-perfect-synonyms">
+    <div class="mainLoadingSpinner" *ngIf="!(synonymData && synonymData.length) && !loadingContent">
+      <span class="please-wait-message">No Synonyms Available</span>
+    </div>
     <ul class="list-group synonyms_added_group" *ngIf="!loadingContent && haveRecord">      
         <li class="list_group" *ngFor="let synonym of synonymData;let i = index">         
           <div class="panel-group">
@@ -83,8 +84,8 @@
                       <div id="collapse_{{i}}" class="panel-collapse collapse body-inner">
                           <div class="panel-body">
                               <mat-form-field  class="example-chip-list" [floatLabel]="'never'">
-                                  <mat-chip-list #chipList aria-label="tag selection">
-                                    <mat-chip *ngFor="let syn of synonym.synonyms"  [selectable]="selectable" [removable]="removable" (removed)="removeList(syn,synonym._id,i)"><span class="mat-val">{{ syn }}</span>
+                                  <mat-chip-list #chipList [attr.aria-label]="'tag selection'">
+                                    <mat-chip *ngFor="let syn of synonym.synonyms"  [selectable]="selectable" [removable]="removable" (removed)="removeList(syn,synonym._id,i)"><span class="mat-val" *ngIf="syn">{{syn}}</span>
                                       <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
                                     </mat-chip>                                  
                                     <input placeholder="Synonyms"
