--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -22,7 +22,7 @@
         font-size: 12px;
     }  
 }
-.contentContainer{
+.botContainer{
    padding: 30px 65px 0 70px;
     height: calc(100vh - 62px);
     overflow: hidden;    
@@ -610,10 +610,83 @@
             }
         }        
     }
+    .botContainer{
+        font-family: 'Inter', sans-serif !important;
+        .bot-box{
+            width: 225px;
+                height: 225px;
+                background: #FFFFFF;
+                border: 1px solid #BDC1C6;
+                box-sizing: border-box;
+                border-radius: 6px;
+
+                &:hover .actions-bot {
+                    visibility: visible;
+                  }
+                  .actions-bot{
+                    margin-left: 75%;
+                    visibility: hidden;
+                   // display: none;
+                }
+            .title-bot{
+            
+                color: #202124;
+                font-weight: 500;
+                font-size: 16px;
+                margin-bottom: 24px;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                margin-top: 15%;
+                margin-bottom: 5%;
+            }
+            .title-bot-desc{
+                color: #9AA0A6;
+                font-size: 12px;
+                line-height: 15px;
+                text-align: center;
+                color: #5F6368;
+            }
+            .title-bot-btm{
+                font-family: 'Inter', sans-serif !important;
+                color: #9AA0A6 !important;
+                font-size: 12px !important;
+                line-height: 14px;
+                text-align: center;
+                margin-bottom:1%;
+                margin-top: 15%;
+            }
+            .btm{
+                //margin-bottom:7% !important;
+                font-family: 'Inter', sans-serif !important;
+                color: #9AA0A6 !important;
+                font-size: 12px !important;
+            }
+            .btm-title{
+                color: #202124 !important;
+                font-weight: 500 !important;
+                font-size: 16px !important;
+            }
+            .icon-gap{
+                width: 25%;
+                height: 25%;
+                border-radius: 6px;
+                margin-left: 40%;
+                background: #f8f9fa;
+                margin-bottom: 14%;
+                visibility: hidden;
+            } & :hover{
+                background: #f8f9fa;
+            }
+            
+        }
+        
+    }
     .list-view-data .row_list .box-content .box {
         width : 220px !important;
         height : 170px !important;
-        background: #f8f9fa !important;
+        background: #FFFFFF !important;
+        // background: #f8f9fa !important;
         border: none;
     }
     .list-view-data .row_list .box-content :hover{
@@ -621,4 +694,10 @@
     }
     .list-view-data .row_list .box-content .box :hover{
         background : none  !important;
+    }
+    .bot-box:hover{
+        background : none  !important;
+        .actions-bot{
+            visibility: visible;
+        }
     }
